--- a/client/package.json
+++ b/client/package.json
@@ -1,13 +1,12 @@
 {
-  "name": "iframe",
+  "name": "client",
   "description": "",
   "version": "0.0.1",
   "main": "./build/module.js",
   "author": "taky@taky.com",
   "dependencies": {
     "@babel/polyfill": "^7.12.1",
-    "lodash": "^4.17.20",
-    "nanoid": "^3.1.12"
+    "lodash": "^4.17.20"
   },
   "devDependencies": {
     "wegweg": "^0.17.0"
