--- a/client/package.json
+++ b/client/package.json
@@ -6,7 +6,8 @@
   "author": "taky@taky.com",
   "dependencies": {
     "@babel/polyfill": "^7.12.1",
-    "lodash": "^4.17.20"
+    "lodash": "^4.17.20",
+    "object-hash": "^2.0.3"
   },
   "devDependencies": {
     "wegweg": "^0.17.0"
